--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8">
-		<title>{{site.coursename}}: {{page.title}}</title>
-		<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/site.css">
-		<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/syntax.css">
+		<meta charset="utf-8" />
+		<title>CS 370: {{ page.title }}</title>
+		<link rel="stylesheet" href="{{ site.url }}/css/site.css" />
+		<link rel="stylesheet" href="{{ site.url }}/css/syntax.css" />
 	</head>
+
 	<body>
-		<div id="content">
-			<div id="header"><a href="{{site.baseurl}}/">{{site.coursename}}</a>: {{page.title}}</div>
-			{{content}}
-			<div id="footer">
-				<a href="{{site.baseurl}}/README.html">Copyright (c) 2005-2016</a> |
-				Unless indicated otherwise, content is freely redistributable |
-				<a class="cc-img" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="{{site.baseurl}}/img/cc-by-sa-80x15.png" /></a>
-			</div>
+		<div class="pageheader">
+			<h1><a href="{{ site.url }}/">CS 370</a>: {{ page.title }}</h1>
+		</div>
+		<div class="content">
+		{{ content }}
+		</div>
+
+		<div class="footer">
+			<a href="{{ site.url }}/README.html">Copyright (c) 2007-2016</a> | Unless indicated otherwise, content is freely-redistributable |
+			<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/us/80x15.png" /></a>
 		</div>
 	</body>
 </html>
-
-<!--
-vim:ts=2:
--->
