--- a/css/site.css
+++ b/css/site.css
@@ -1,98 +1,71 @@
-#content {
-	max-width: 45em;
-	margin: 0 auto;
+body {
+	font:13.34px helvetica,arial,freesans,clean,sans-serif;
+	margin: 0px 80px;
+	background-color: #F8F8F8;
+	color: #444;
+	line-height:1.4em;
 }
 
-#header {
-	border-top: 2px solid #55a;
-	border-bottom: 2px solid #55a;
-	background: #eef;
+p {
+	margin:1em 0;
+	line-height:1.5em;
+}
+
+.pageheader h1 {
+/* 	color: #141; */
 	font-size: 200%;
-	text-align: center;
-	margin-top: 10px;
-	margin-bottom: 30px;
+	background: #d3d3d3;
+	border: 1px solid #444;
+	border-radius: 24px;
+	padding: 10px 20px;
 }
 
-#header a {
+.pageheader h1 a {
 	text-decoration: none;
 }
 
-#header a:hover {
+.pageheader h1 a:hover {
 	background: black;
 	color: white;
 }
 
-#footer {
+.content {
+	padding: 0px 20px;
+/* 	background: white; */
+}
+
+.content h1 {
+/* 	color: #141; */
+/* 	border-bottom: 2px solid #444; */
+/* 	padding-bottom: 10px; */
+}
+
+.content h2, .content h3 {
+/* 	color: #141; */
+/* 	border-bottom: 1px solid #444; */
+}
+
+.footer {
 	margin-top: 30px;
 	margin-bottom: 10px;
 	padding: 10px 30px;
 	text-align: center;
-	border-top: 2px solid #55a;
-	border-bottom: 2px solid #55a;
-	background: #eef;
-}
-
-/* Minor tweak to get the CC image link to align nicely with the footer text */
-a.cc-img {
-	vertical-align: -2px;
-}
-
-#topnav {
-	text-align: center;
-	padding: 4px 16px;
-}
-
-#topnav_inner {
-	margin-left: 80px;
-	margin-right: 80px;
-	line-height: 2;
-}
-
-#topnav a {
-	border: 2px solid #55a;
+	background: #d3d3d3;
+	border: 1px solid #444;
 	border-radius: 16px;
-	padding: 4px 12px;
-	text-decoration: none;
-	background: #eef;
-	color: black;
 }
 
-#topnav a:hover {
-	background: #55a;
-	color: white;
-	border: 2px solid #55a;
+.callout {
+	background: #fbb;
+	border: 4px solid red;
+	border-radius: 24px;
+	padding: 10px 40px;
 }
 
-h1, h2, h3 {
-	font-weight: bold;
-}
-
-h1 {
-	border-left: 14px solid #55a;
-	border-bottom: 2px solid #55a;
-	padding-left: 10px;
-	font-size: 180%;
-}
-
-h2, h3 {
-	border-bottom: 1px solid #55a;
-}
-
-h2 {
-	font-size: 150%;
-}
-
-h3 {
-	font-size: 120%;
-}
-
-table {
-	border-collapse: collapse;
-}
-
-td, th {
-	border: 1px solid black;
-	padding: 4px;
+div.linkcolumn ul {
+	width: 240px;
+	margin: 0 0;
+	float: left;
 }
 
 pre {
@@ -104,13 +77,28 @@ pre {
 	overflow: auto; /* scroll if doesn't fit within page */
 }
 
-dt {
-	margin-top: 8px;
+table {
+	border: 1px solid black;
+	border-collapse: collapse;
+	font-size:inherit;
+	font:100%;
+	margin:1em;
 }
 
-.callout {
-	background: #fbb;
-	border: 4px solid red;
-	border-radius: 24px;
-	padding: 10px 40px;
+
+th {
+	border:2px solid #bbb;
+	padding: 5px 20px;
+}
+
+tr, td {
+	border:1px solid #bbb;
+	border-left: 2px solid #bbb;
+	border-right: 2px solid #bbb;
+	padding: 5px 20px;
+}
+
+/* Minor tweak to get the CC image link to align nicely with the footer text */
+a.cc-img {
+	vertical-align: -2px;
 }
